2006-11-14  DJ Delorie  <dj@redhat.com>

	* Makefile.tpl (clean-stage*): Sync with GCC (clean).
	* Makefile.in: Sync with GCC.
	* configure.in: Sync with GCC (mpfr, gmp).
	* configure: Sync with GCC.

2006-11-08  Jie Zhang  <jie.zhang@analog.com>

	* configure.in: Remove target-libgloss from noconfigdirs for
	bfin-*-*.
	* configure: Regenerated.

2006-10-27  Jeff Johnston  <jjohnstn@redhat.com>

	* COPYING.NEWLIB: Add spu license.
	* COPYING.LIBGLOSS: Ditto.

2006-10-17  Brooks Moses  <bmoses@stanford.edu>

	* Makefile.def: Added pdf target handling.
	* Makefile.tpl: Added pdf target handling.
	* Makefile.in: Regenerated.

2006-10-11  Jeff Johnston  <jjohnstn@redhat.com>

	* COPYING.NEWLIB: Updated.
	* COPYING.LIBGLOSS: Ditto.

2006-09-27  Dave Brolley  <brolley@redhat.com>

	* configure.in (RUNTEST): Look for 'runtest' in the source tree by using
	$s instead of $r.
	* configure: Regenerated.

2006-09-26  Ben Elliston  <bje@au.ibm.com>

	* config.sub, config.guess: Update from upstream sources.

2006-09-20  Thiemo Seufer  <ths@mips.com>

	* configure.in: Remove redundant handling of mips*-dec-bsd*. Likewise
	for mipstx39-*-*. Disable libgloss for mips64*-*-linux*.
	* configure: Regenerate.

2006-08-30  Corinna Vinschen  <corinna@vinschen.de>

	* configure.in: Never build newlib for a Mingw host.
	Never build newlib as Mingw target library.
	Test the existence of winsup/cygwin for building a Cygwin newlib,
	rather than just winsup.
	Add winsup/mingw and winsup/w32api paths to FLAGS_FOR_TARGET if
	building a Mingw target.
	* configure: Regenerate.

2006-08-15  Thiemo Seufer  <ths@mips.com>
            Nigel Stephens  <nigel@mips.com>
            David Ung  <davidu@mips.com>

	* config.sub: Add support for sde as alias of mipsisa32-sde-elf.

2006-07-25  Paolo Bonzini  <bonzini@gnu.org>

	Sync from GCC:
	2006-07-04  Eric Botcazou  <ebotcazou@libertysurf.fr>

        PR bootstrap/18058
        * configure.in: Add -fkeep-inline-functions to CFLAGS for stage 1